compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow_32bit-20.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "+-16#80000000 % no overflow"

---
"_"@(FileId(1), 6..7) -> Integer(ConstInt { magnitude: 2147483648, sign: Negative, width: As32 })


