compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow_32bit-23.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: (-2) ** 33

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..21, state: Error(IntOverflow) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Spanned(IntOverflow, 16..18)

error at 16..18: integer overflow in compile-time expression

