compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_int_overflow_32bit-5.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 20
expression: "-16#80000000 + -1"

---
"_"@(FileId(1), 6..7) -> ConstError { kind: IntOverflow, span: (FileId(1), 24..25) }

error in file FileId(1) at 24..25: cannot compute expression at compile-time
| error in file FileId(1) for 24..25: integer overflow in compile-time expression

